@@ -174,10 +174,11 @@ zoh_set_converter (SRC_PRIVATE *psrc, int src_enum)
 
 	if (psrc->private_data == NULL)
 	{	priv = calloc (1, sizeof (*priv) + psrc->channels * sizeof (float)) ;
-		if (priv == NULL)
-			return SRC_ERR_MALLOC_FAILED ;
 		psrc->private_data = priv ;
 		} ;
+
+	if (priv == NULL)
+		return SRC_ERR_MALLOC_FAILED ;
 
 	priv->zoh_magic_marker = ZOH_MAGIC_MARKER ;
 	priv->channels = psrc->channels ;
